--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Challenge Angel Ancheta</h1>
     <h2>Logo and Graphics</h2>
+    <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
+    <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="" srcset="" width="50%">
+    <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="" srcset=""width="50%">
     <h2>Typography</h2>
+    <p>Robota</p>
     <h2>Buttons and Boxes</h2>
     <h2>Colors</h2>
+
+    https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42
 </body>
 </html>
