added content and figma link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Challenge Angel Ancheta</h1>
+    <a href="https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42">Figma</a>
     <h2>Logo and Graphics</h2>
     <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
     <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="" srcset="" width="50%">
@@ -16,8 +17,11 @@
     <h2>Typography</h2>
     <p>Robota</p>
     <h2>Buttons and Boxes</h2>
+    <button type="submit">Submit</button>
+    
     <h2>Colors</h2>
-
-    https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42
+    <p>black and white</p>
+   
+   
 </body>
 </html>
