--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <a href="https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42">Figma</a>
     <h2>Logo and Graphics</h2>
     <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
-    <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="" srcset="" width="50%">
-    <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="" srcset=""width="50%">
+    <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="banner of a relaxing, lush workspace" srcset="" width="50%">
+    <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="mac laptop, pens, post it, and iphone" srcset=""width="50%">
     <h2>Typography</h2>
     <p>Robota</p>
     <h2>Buttons and Boxes</h2>
