added design details

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
     <h2>Logo and Graphics</h2>
     <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
     <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="banner of a relaxing, lush workspace" srcset="" width="50%">
+    <p>This image should be displayed with space around it (less than 50% of the section it occupies</p>
     <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="mac laptop, pens, post it, and iphone" srcset=""width="50%">
+    <p>this image should span exactly width of the page, with the couch taking just under half of the vertical space; the lamp should be nearly fully visible</p>
+    <p>this photo may be cropped to achieve this specific look</p>
+    <p>Should be 330 px high (~32% of vertical space on desktop and tablet</p>
     <h2>Typography</h2>
-    <p>Robota</p>
+    <p>Roboto</p>
+    <p>Roboto bold for headings</p>
     <h2>Buttons and Boxes</h2>
     <button type="submit">Submit</button>
     
