Details on layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <h1>Challenge Angel Ancheta</h1>
-    <a href="https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42">Figma</a>
+    <a href="https://www.figma.com/file/uGvuOLzkPoTAFTMrXKAdhY/Untitled?node-id=1%3A42">Figma</a> <br>
+    <strong>I didn't know you could make a tall figma thing so it looks like I have 3 pages so it looks like I have a bunch of pages <br> BUT it should be SPA, i wanted to emphasize that on desktop there is a call to scroll <br> so the content underneath is peeking at the user until they get all the way to the bottom</strong>
     <h2>Logo and Graphics</h2>
     <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
     <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="banner of a relaxing, lush workspace" srcset="" width="50%">
@@ -22,7 +23,7 @@
     <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="mac laptop, pens, post it, and iphone" srcset=""width="50%">
     <p>this image should span exactly width of the page, with the couch taking just under half of the vertical space; the lamp should be nearly fully visible</p>
     <p>this photo may be cropped to achieve this specific look</p>
-    <p>Should be 330 px high (~32% of vertical space on desktop and tablet</p>
+    <p>Should be 330 px high (~32% of vertical space on desktop/tablet and mobile)</p>
     <h2>Typography</h2>
     <p>Roboto</p>
     <p>Roboto bold for headings</p>
@@ -31,7 +32,7 @@
     
     <h2>Colors</h2>
     <p>black and white</p>
-   
+
    
 </body>
 </html>
