--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <strong>I didn't know you could make a tall figma thing so it looks like I have 3 pages so it looks like I have a bunch of pages <br> BUT it should be SPA, i wanted to emphasize that on desktop there is a call to scroll <br> so the content underneath is peeking at the user until they get all the way to the bottom</strong>
     <h2>Logo and Graphics</h2>
     <p>the portfolio images are screenshots from dribbble I didn't save them :/</p>
-    <img src="../media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="banner of a relaxing, lush workspace" srcset="" width="50%">
+    <img src="./media/daniel-fazio-DzqeB43HfnE-unsplash.jpg" alt="banner of a relaxing, lush workspace" srcset="" width="50%">
     <p>This image should be displayed with space around it (less than 50% of the section it occupies</p>
-    <img src="../media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="mac laptop, pens, post it, and iphone" srcset=""width="50%">
+    <img src="./media/spacejoy-9M66C_w_ToM-unsplash.jpg" alt="mac laptop, pens, post it, and iphone" srcset=""width="50%">
     <p>this image should span exactly width of the page, with the couch taking just under half of the vertical space; the lamp should be nearly fully visible</p>
     <p>this photo may be cropped to achieve this specific look</p>
     <p>Should be 330 px high (~32% of vertical space on desktop/tablet and mobile)</p>
