Forgot my images lol

--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
     <p>Should be 330 px high (~32% of vertical space on desktop/tablet and mobile)</p>
     <h2>Typography</h2>
     <p>Roboto</p>
-    <p>Roboto bold for headings</p>
+    <p>Roboto bold for headings (64px, 48px)</p>
+    <p>portfolio p tag (18px)</p>
     <h2>Buttons and Boxes</h2>
     <button type="submit">Submit</button>
-    
+    <br>
+    <label for="example">Example Input</label>
+    <input type="text" name="example"> 
+    <br>
+    <label for="example2">Example Textarea</label>
+    <textarea name="example2" id="" cols="30" rows="10"></textarea>
     <h2>Colors</h2>
     <p>black and white</p>
 
